Changed how the api is parsing data. Added a new CreateUserRequest because update and create has differences in required data.
